# nucleus

./: README.md  io.github.lo2dev.Elements.json  io.github.lo2dev.Nucleus.json  meson.build
data/: elements_named_after.json  io.github.lo2dev.Elements.desktop.in  io.github.lo2dev.Elements.gschema.xml  io.github.lo2dev.Elements.metainfo.xml.in  io.github.lo2dev.Elements.service.in  io.github.lo2dev.Nucleus.desktop.in  io.github.lo2dev.Nucleus.gschema.xml  io.github.lo2dev.Nucleus.metainfo.xml.in  io.github.lo2dev.Nucleus.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: element-info.blp  element_info.py  elements.gresource.xml  elements.in  grid-card.blp  grid_card.py  main.py  meson.build  nucleus.gresource.xml  nucleus.in  style.css  utils.py  window.blp  window.py
